# Rapid-MLX

./: Makefile  README.md  install.sh  pyproject.toml
.github/workflows/: auto-release.yml  ci.yml  pr-validate.yml  spam-issue-guard.yml
community-benchmarks/: aggregated.json
community-benchmarks/scripts/: validate.py
community-benchmarks/submissions/: 20260615-apple-m3-ultra-llama-3-1-8b-4bit-acd2ae43768f.json  20260615-apple-m3-ultra-phi-4-mini-4bit-cc3b1481796d.json  20260617-apple-m3-ultra-gemma3-1b-4bit-bcdd015e6401.json  20260617-apple-m3-ultra-gemma3-1b-qat-4bit-ba03a40c2ad9.json  20260617-apple-m3-ultra-gemma3-4b-qat-4bit-150bbadafcd4.json
docs/development/: contributing.md  pr_merge_sop.md  releasing.md
docs/getting-started/: installation.md
docs/reference/: cli.md
reports/benchmarks/readme-refresh/: results-20260606-150434.json  results-20260606-150736.json  results-20260606-151417.json  results-20260606-152047.json  results-20260606-152630.json  results-20260606-152654.json  results-20260606-152743.json  results-20260606-153334.json  summary.md
scripts/: audit_cli_config_fidelity.py  audit_tool_parser_coverage.py  bench_readme_refresh.py  dev_test.py  release_check_m3.sh  release_check_m3_random.py
scripts/pr_validate/: README.md  context.py  runner.py
scripts/pr_validate/steps/: codex_review.py  fetch.py
tests/: regression_suite.py  test_aliases_contract.py  test_anthropic_adapter.py  test_anthropic_models.py  test_anthropic_output_config.py  test_anthropic_route_auth.py  test_anthropic_route_streaming.py  test_anthropic_route_thinking_gate.py  test_anthropic_stream_reasoning.py  test_anthropic_streaming_reasoning.py  test_audio_upload_size_limit.py  test_batched_engine_output_router.py  test_batching_deterministic.py  test_bench_tier_all.py  test_bench_tier_harness.py  test_bench_tier_smoke.py  test_cancelled_requests_metric.py  test_chat_n_must_equal_1.py  test_chat_route_tool_tag_leak.py  test_chat_streaming_guided.py  test_cli_argcomplete.py  test_cli_chat.py  test_cli_config_fidelity.py  test_cloud_router.py  test_community_bench.py  test_completions_log_redaction.py  test_completions_spec_parity.py  test_config_and_middleware.py  test_content_block_strict_types.py  test_context_length_exceeded.py  test_cors_env_configurable.py  test_d_anthro_validation.py  test_dflash_integration.py  test_diffusion_engine.py  test_disconnect_guard_aborts_scheduler.py  test_disk_space_check.py  test_doctor_env_health.py  test_doctor_no_model_load.py  test_doctor_runner.py  test_embeddings_timeout_admission.py  (+67 more)
tests/integrations/: test_langchain.py
vllm_mlx/: __init__.py  _completion.py  _log_namespace.py  _mirror.py  _signal_observability.py  _version_check.py  aliases.json  benchmark.py  cli.py  embedding.py  engine_core.py  gradio_app.py  memory_cache.py  mllm_batch_generator.py  mllm_scheduler.py  model_aliases.py  model_auto_config.py  output_collector.py  request.py  scheduler.py  server.py  specprefill.py
vllm_mlx/agents/profiles/: opencode.yaml
vllm_mlx/api/: anthropic_adapter.py  anthropic_models.py  guided.py  models.py  responses_adapter.py  responses_models.py  tool_logits.py  utils.py
vllm_mlx/bench/: __init__.py  tier_runner.py
vllm_mlx/bench/tiers/: __init__.py  agent.py  api.py  benchmark.py  perf.py  smoke.py  stress.py
vllm_mlx/config/: server_config.py
vllm_mlx/doctor/: __init__.py  cli.py  env_health.py
vllm_mlx/engine/: __init__.py  base.py  batched.py  simple.py
vllm_mlx/middleware/: auth.py  body_size.py  exception_handlers.py  probe_fastpath.py
vllm_mlx/models/: __init__.py  deepseek_v4.py  llm.py  mllm.py
vllm_mlx/patches/: qwen3_next_mtp.py
vllm_mlx/reasoning/: __init__.py  deepseek_r1_parser.py  qwen3_parser.py  think_parser.py  ui_tars_parser.py
vllm_mlx/routes/: anthropic.py  audio.py  cache.py  chat.py  completions.py  embeddings.py  health.py  metrics.py  models.py  responses.py
vllm_mlx/runtime/: diffusion_lane.py
vllm_mlx/service/: helpers.py  postprocessor.py
vllm_mlx/share/: cli.py
vllm_mlx/speculative/dflash/: server.py
vllm_mlx/tool_parsers/: __init__.py  abstract_tool_parser.py  deepseek_tool_parser.py  deepseekv31_tool_parser.py  functionary_tool_parser.py  gemma4_tool_parser.py  glm47_tool_parser.py  granite_tool_parser.py  harmony_tool_parser.py  hermes_tool_parser.py  kimi_tool_parser.py  llama_tool_parser.py  minimax_tool_parser.py  mistral_tool_parser.py  nemotron_tool_parser.py  qwen3coder_tool_parser.py  qwen_tool_parser.py  seed_oss_tool_parser.py  ui_tars_tool_parser.py  xlam_tool_parser.py
vllm_mlx/utils/: generation_config.py  mamba_cache.py  tokenizer.py
